--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io-client": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
