WebSocket configuration and Styling

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "standard": "^8.6.0"
   },
   "dependencies": {
+    "bufferutil": "^3.0.0",
+    "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^1.7.3"
+    "utf-8-validate": "^3.0.1",
+    "websocket": "^1.0.24"
   },
   "scripts": {
     "start": "react-scripts start",
