--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-redux-websocket",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "http://www.facundolarocca.com/examples/react-redux-websocket",
   "devDependencies": {
     "react-scripts": "0.9.0",
     "standard": "^8.6.0"
